--- a/public/styles.css
+++ b/public/styles.css
@@ -86,7 +86,6 @@ header {
     max-width: 490px;
     display:flex;
     flex-direction: column;
-    
 }
 
 .player--top {
@@ -132,6 +131,9 @@ header {
 }
 
 .correct {
+    animation-duration: 250ms;
+    animation-delay: 0ms;
+    animation: flip-out 1s;
     text-align: center;
     align-items: center;
     line-height: 35px;
@@ -213,50 +215,18 @@ header {
     font-weight: 500;
 }
 
-
-/* card styling delete after */
-.card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300px;
-    height: 300px;
-    margin: -150px;
-    float: left;
-    perspective: 500px;
-  }
-  
-  .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  
-    transition: transform 1s;
-    transform-style: preserve-3d;
-  }
-  
-  .card:hover .content {
-    transform: rotateY( 180deg ) ;
-    transition: transform 0.5s;
-  }
-  
-  .front,
-  .back {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: white;
-    line-height: 300px;
-    color: #03446A;
-    text-align: center;
-    font-size: 60px;
-    border-radius: 5px;
-    backface-visibility: hidden;
-  }
-  
-  .back {
-    background: #03446A;
-    color: white;
-    transform: rotateY( 180deg );
-  }
+/* keyframes attempt */
+@keyframes flip-out {
+    from {
+        -webkit-transform: rotateY(-90deg);
+        transform: rotateY(-90deg);
+        -moz-transform: rotateY(-90deg);
+        -o-transform: rotateY(-90deg);
+    }
+    to {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg);
+    }
+}
