--- a/public/styles.css
+++ b/public/styles.css
@@ -5,10 +5,8 @@
 
 
 body {
-    background-image: linear-gradient(to bottom right, rgb(250, 250, 250), rgb(219, 219, 219));
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: linear-gradient(137.28deg, #313333 -5.33%, #121212 33.62%);
+    background-attachment: fixed;
     background-attachment: fixed;
     height: 100vh;
     font-family: 'Inter', 'san-serif';
@@ -18,11 +16,11 @@ header {
     text-align: center;
     align-items: center;
     line-height: 80px;
-    background-color: rgb(245, 245, 245);
     box-shadow: 0 0 2px;
     height: 80px;
     margin-bottom: 10px;
     width: 100%;
+    color: white;
 }
 
 .dropdown {
@@ -41,24 +39,28 @@ header {
     width: 100%;
     margin: 0 auto;
     margin-left: 8px;
+    height: 35px;
     background-color: rgb(230, 230, 230);
     font-size: 1.4rem;
     min-width: 200px;
     max-width: 300px;
+    border-bottom: 1px solid black;
 }
 
 .element:hover {
+    cursor: pointer;
     background-color: rgb(218, 218, 218);
 }
 
 .dropdown--input{
     width: 100%;
     margin: 0 auto;
-    border-radius: 15px;
+    border-radius: 10px;
     border: none;
-    height: 25px;
+    height: 35px;
     padding-left: 1rem;
     min-width: 200px;
+    width: 18%;
     max-width: 300px;
     display:flex;
     align-items: center;
@@ -78,12 +80,13 @@ header {
 }
 
 .player {
+    color: #FFFF;
     margin: 0 auto;
-    margin-top: 1.2rem;
-    height: 350px;
+    margin-top: 1.1rem;
+    height: 300px;
     width: 45%;
     min-width: 340px;
-    max-width: 490px;
+    max-width: 380px;
     display:flex;
     flex-direction: column;
 }
@@ -91,24 +94,31 @@ header {
 .player--top {
     margin-top: 5px;
     margin-left: 10px;
-    min-width: 340px;
-    max-width: 490px;
     display: flex;
-    width: 92%;
+    width: 340px;
     text-align: center;
     align-items: center;
+    height: 90px;
+}
+.player--name {
+    font-weight: 500;
+    color: #FFFF;
 }
 
+.player--name-small {
+    font-weight: 500;
+    font-size: 1.6rem;
+}
 
 .player--img {  
     margin-left: 10px;
-    margin-right: 30px;
-    background-color: grey;
+    margin-right: 20px;
     border-radius: 100%;
     width: 70px;
 }
 
 .player--bottom {
+    height: 150px;
     width: 100%
 }
 
@@ -131,51 +141,46 @@ header {
 }
 
 .correct {
-    color: white;
     animation-duration: 250ms;
     animation-delay: 0ms;
-    animation: flip-out 1s;
+    animation: flip-out 250ms;
     text-align: center;
     align-items: center;
-    line-height: 35px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    height: 90%;
-    width: 30%;
-    min-width: 110px;
-    max-width: 150px;
-    border-radius: 15px;
-    background-color: green;
+    line-height: 30px;
+    margin: 5px;
+    padding: 5px 5px 5px 5px;
+    height: 65px;
+    width: 115px;
+    border-radius: 10px;
+    background: linear-gradient(137.28deg, #72c97c -5.33%, #59AA61 33.62%);
     font-size: 1.4rem;
 }
-
 
 .wrong {
     text-align: center;
     align-items: center;
-    line-height: 35px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    height: 90%;
-    width: 30%;
-    min-width: 110px;
-    max-width: 150px;
-    border-radius: 15px;
-    background-color: rgb(252, 57, 57);
+    line-height: 30px;
+    margin: 5px;
+    padding: 5px 5px 5px 5px;
+    height: 65px;
+    width:115px;
+    border-radius: 8px;
+    background: linear-gradient(137.28deg, #656868 -5.33%, #424242 33.62%);
+    box-shadow:  0px 1px 1px #424242;
     font-size: 1.4rem;
 }
 
 .winner-sign {
     width: 50%;
-    height: 70%;
+    height: 40%;
     background-color: rgb(99, 200, 99);
     color: white;
     position: fixed;
     z-index: 1;
     left: 25%;
+    margin-top: 20%;
     box-shadow: 0 0 2px;
+    animation: wobble 3s ease;
 
 }
 
@@ -193,28 +198,25 @@ header {
 }
 
 .player--country {
-    width: 30%;
+    width: 40%;
 }
 
 .player--club {
-    width: 25%;
+    width: 30%;
 }
 
 .stat--title {
-    font-weight: 400;
+    font-weight: 200;
 }
 
 .stat--stat {
-    font-weight: 500;
-    font-size: 1.5rem;
+    font-weight: 400;
+    font-size: 1.7rem;
 }
 
 .counter {
     margin-bottom: 10px;
-}
-
-.player--name {
-    font-weight: 500;
+    color: #FFFF;
 }
 
 /* keyframes attempt */
@@ -232,3 +234,13 @@ header {
         -o-transform: rotateY(0deg);
     }
 }
+@keyframes wobble {
+    0% { transform: translateX(0%); }
+    15% { transform: translateX(-25%) rotate(-5deg); }
+    30% { transform: translateX(20%) rotate(3deg); }
+    45% { transform: translateX(-15%) rotate(-3deg); }
+    60% { transform: translateX(10%) rotate(2deg); }
+    75% { transform: translateX(-5%) rotate(-1deg); }
+    100% { transform: translateX(0%); }
+}
+  
