--- a/public/styles.css
+++ b/public/styles.css
@@ -38,8 +38,6 @@ header {
 .element {
     width: 100%;
     margin: 0 auto;
-    margin-left: 8px;
-    height: 35px;
     background-color: rgb(230, 230, 230);
     font-size: 1.4rem;
     min-width: 200px;
@@ -59,9 +57,6 @@ header {
     border: none;
     height: 35px;
     padding-left: 1rem;
-    min-width: 200px;
-    width: 18%;
-    max-width: 300px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -175,9 +170,6 @@ header {
     height: 40%;
     background-color: rgb(99, 200, 99);
     color: white;
-    position: fixed;
-    z-index: 1;
-    left: 25%;
     margin-top: 20%;
     box-shadow: 0 0 2px;
     animation: wobble 3s ease;
@@ -221,13 +213,13 @@ header {
 
 /* keyframes attempt */
 @keyframes flip-out {
-    from {
+    10% {
         -webkit-transform: rotateY(-90deg);
         transform: rotateY(-90deg);
         -moz-transform: rotateY(-90deg);
         -o-transform: rotateY(-90deg);
     }
-    to {
+    100% {
         -webkit-transform: rotateY(0deg);
         transform: rotateY(0deg);
         -moz-transform: rotateY(0deg);
